# beginners-zurihac2025

./: README.md
day1/: Day1.hs  Day1Exercises.hs  beginners-zurihac2025-day1.cabal
day2/: Day2.hs  Day2Exercises.hs  beginners-zurihac2025-day2.cabal
