cabal-version: 3.0
name: beginners-zurihac2025-day1
author: Andres Löh
maintainer: Andres Löh <andres@well-typed.com>
synopsis: Day 1 of ZuriHac 2025 Beginners Track
version: 1.0
build-type: Simple
license: BSD-3-Clause

library
  default-language: GHC2021
  build-depends:
    base < 5
  ghc-options: -Wall
  exposed-modules:
    Day1
    Day1Exercises
